--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,16 @@
     <title>ToDo-list</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <section>
+      <h2>Today's To Do</h2>
+      <hr>
+      <form action="submit">
+        <input type="text" placeholder="Add to your list..." class="add-task">
+        <button type="submit">↵</button>
+      </form>
+      <hr>
+      <div class="to-do-list"></div>
+      <button type="button" class="clear">Clear all completed</button>
+    </section>
 </body>
 </html>
