--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ToDo-list</title>
+    <title>To-Do List</title>
 </head>
 <body>
-    <section>
-      <h2>Today's To Do</h2>
-      <hr>
-      <form action="submit">
-        <input type="text" placeholder="Add to your list..." class="add-task">
-        <button type="submit">↵</button>
-      </form>
-      <hr>
-      <div class="to-do-list"></div>
-      <button type="button" class="clear">Clear all completed</button>
+    <section class="todo-list">
+        <div class="head">
+            <h1>Today's To-Do List</h1>
+            <button type="button">⟳</button>
+        </div>
+        <form action="submit">
+            <div>
+                <input class="add-task" type="text" placeholder="Add to your list..." required>
+                <button type="submit">↵</button>
+            </div>
+        </form>
+        <ul class="todo-placeholder"></ul>
+        <button type="button" class="clear-complete">Clear all completed</button>
     </section>
 </body>
 </html>
